@@ -145,7 +145,7 @@ def main():
 
                      # Need trio.lowlevel
                      'trio >= 0.15',
-                     'pyfuse3 >= 3.0, < 4.0' ]
+                     'pyfuse3 >= 3.2.0, < 4.0' ]
     if sys.version_info < (3, 7, 0):
         required_pkgs.append('async_generator')
 
